--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,5 @@
 <h1>Hello Rails!</h1>
+<p>Ask your coach anything</p>
 <form action="/answer" data-turbo="false">
   <input type="text" name="question">
   <input type="submit" value="Ask!">
